gitignore, email controller y Service, dependencias nuevas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
+# Servidor SMTP de Gmail
+spring.mail.host=smtp.gmail.com
+# Puerto SMTP (587 para TLS, 465 para SSL)
+spring.mail.port=587
+spring.mail.username=dballestero366@gmail.com
+spring.mail.password=dcmo jmwm vkod bluv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
