--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
-application.properties
-**/application.properties
+# Ignorar configuración de Spring Boot
+src/main/resources/application.properties
